golang/nbql/.antlr/NexusParser.java
// Generated from d:/go/nexuscore/golang/nbql/Nexus.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class NexusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, K_OVERWRITE=7, K_RESTORE=8, 
		K_SNAPSHOT=9, K_CREATE=10, K_CONFIG=11, K_PUSH=12, K_QUERY=13, K_REMOVE=14, 
		K_SHOW=15, K_SET=16, K_FROM=17, K_TO=18, K_AT=19, K_TAGGED=20, K_AGGREGATE=21, 
		K_BY=22, K_ON=23, K_LIMIT=24, K_SERIES=25, K_AFTER=26, K_EMPTY=27, K_WINDOWS=28, 
		K_METRICS=29, K_TAGS=30, K_TAG=31, K_KEYS=32, K_VALUES=33, K_WITH=34, 
		K_KEY=35, K_TIME=36, K_NOW=37, K_TRUE=38, K_FALSE=39, K_NULL=40, K_FLUSH=41, 
		K_MEMTABLE=42, K_DISK=43, K_ALL=44, K_ORDER=45, K_ASC=46, K_DESC=47, K_AS=48, 
		K_DT=49, K_RELATIVE=50, PLUS=51, MINUS=52, DURATION_LITERAL=53, NUMBER=54, 
		IDENTIFIER=55, STRING_LITERAL=56, WS=57, LINE_COMMENT=58;
	public static final int
		RULE_statement = 0, RULE_snapshotStatement = 1, RULE_restoreStatement = 2, 
		RULE_pushStatement = 3, RULE_createStatement = 4, RULE_queryStatement = 5, 
		RULE_time_range = 6, RULE_query_clauses = 7, RULE_removeStatement = 8, 
		RULE_showStatement = 9, RULE_flushStatement = 10, RULE_aggregation_spec_list = 11, 
		RULE_aggregation_spec = 12, RULE_series_specifier = 13, RULE_metric_name = 14, 
		RULE_tag_list = 15, RULE_tag_assignment = 16, RULE_tag_value = 17, RULE_field_list = 18, 
		RULE_field_assignment = 19, RULE_timestamp = 20, RULE_duration = 21, RULE_value = 22, 
		RULE_literal_value = 23, RULE_option_list = 24, RULE_option_assignment = 25, 
		RULE_option_value = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"statement", "snapshotStatement", "restoreStatement", "pushStatement", 
			"createStatement", "queryStatement", "time_range", "query_clauses", "removeStatement", 
			"showStatement", "flushStatement", "aggregation_spec_list", "aggregation_spec", 
			"series_specifier", "metric_name", "tag_list", "tag_assignment", "tag_value", 
			"field_list", "field_assignment", "timestamp", "duration", "value", "literal_value", 
			"option_list", "option_assignment", "option_value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "'='", "','", "'*'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'+'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "K_OVERWRITE", "K_RESTORE", 
			"K_SNAPSHOT", "K_CREATE", "K_CONFIG", "K_PUSH", "K_QUERY", "K_REMOVE", 
			"K_SHOW", "K_SET", "K_FROM", "K_TO", "K_AT", "K_TAGGED", "K_AGGREGATE", 
			"K_BY", "K_ON", "K_LIMIT", "K_SERIES", "K_AFTER", "K_EMPTY", "K_WINDOWS", 
			"K_METRICS", "K_TAGS", "K_TAG", "K_KEYS", "K_VALUES", "K_WITH", "K_KEY", 
			"K_TIME", "K_NOW", "K_TRUE", "K_FALSE", "K_NULL", "K_FLUSH", "K_MEMTABLE", 
			"K_DISK", "K_ALL", "K_ORDER", "K_ASC", "K_DESC", "K_AS", "K_DT", "K_RELATIVE", 
			"PLUS", "MINUS", "DURATION_LITERAL", "NUMBER", "IDENTIFIER", "STRING_LITERAL", 
			"WS", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Nexus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NexusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(NexusParser.EOF, 0); }
		public PushStatementContext pushStatement() {
			return getRuleContext(PushStatementContext.class,0);
		}
		public CreateStatementContext createStatement() {
			return getRuleContext(CreateStatementContext.class,0);
		}
		public QueryStatementContext queryStatement() {
			return getRuleContext(QueryStatementContext.class,0);
		}
		public RemoveStatementContext removeStatement() {
			return getRuleContext(RemoveStatementContext.class,0);
		}
		public ShowStatementContext showStatement() {
			return getRuleContext(ShowStatementContext.class,0);
		}
		public FlushStatementContext flushStatement() {
			return getRuleContext(FlushStatementContext.class,0);
		}
		public SnapshotStatementContext snapshotStatement() {
			return getRuleContext(SnapshotStatementContext.class,0);
		}
		public RestoreStatementContext restoreStatement() {
			return getRuleContext(RestoreStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_PUSH:
				{
				setState(54);
				pushStatement();
				}
				break;
			case K_CONFIG:
				{
				setState(55);
				createStatement();
				}
				break;
			case K_QUERY:
				{
				setState(56);
				queryStatement();
				}
				break;
			case K_REMOVE:
				{
				setState(57);
				removeStatement();
				}
				break;
			case K_SHOW:
				{
				setState(58);
				showStatement();
				}
				break;
			case K_FLUSH:
				{
				setState(59);
				flushStatement();
				}
				break;
			case K_SNAPSHOT:
				{
				setState(60);
				snapshotStatement();
				}
				break;
			case K_RESTORE:
				{
				setState(61);
				restoreStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(64);
				match(T__0);
				}
			}

			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SnapshotStatementContext extends ParserRuleContext {
		public TerminalNode K_SNAPSHOT() { return getToken(NexusParser.K_SNAPSHOT, 0); }
		public SnapshotStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_snapshotStatement; }
	}

	public final SnapshotStatementContext snapshotStatement() throws RecognitionException {
		SnapshotStatementContext _localctx = new SnapshotStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_snapshotStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(K_SNAPSHOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RestoreStatementContext extends ParserRuleContext {
		public TerminalNode K_RESTORE() { return getToken(NexusParser.K_RESTORE, 0); }
		public TerminalNode K_FROM() { return getToken(NexusParser.K_FROM, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(NexusParser.STRING_LITERAL, 0); }
		public TerminalNode K_WITH() { return getToken(NexusParser.K_WITH, 0); }
		public TerminalNode K_OVERWRITE() { return getToken(NexusParser.K_OVERWRITE, 0); }
		public RestoreStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_restoreStatement; }
	}

	public final RestoreStatementContext restoreStatement() throws RecognitionException {
		RestoreStatementContext _localctx = new RestoreStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_restoreStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(K_RESTORE);
			setState(72);
			match(K_FROM);
			setState(73);
			match(STRING_LITERAL);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==K_WITH) {
				{
				setState(74);
				match(K_WITH);
				setState(75);
				match(K_OVERWRITE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PushStatementContext extends ParserRuleContext {
		public TerminalNode K_PUSH() { return getToken(NexusParser.K_PUSH, 0); }
		public Metric_nameContext metric_name() {
			return getRuleContext(Metric_nameContext.class,0);
		}
		public TerminalNode K_SET() { return getToken(NexusParser.K_SET, 0); }
		public Field_listContext field_list() {
			return getRuleContext(Field_listContext.class,0);
		}
		public TerminalNode K_TIME() { return getToken(NexusParser.K_TIME, 0); }
		public TimestampContext timestamp() {
			return getRuleContext(TimestampContext.class,0);
		}
		public TerminalNode K_TAGGED() { return getToken(NexusParser.K_TAGGED, 0); }
		public Tag_listContext tag_list() {
			return getRuleContext(Tag_listContext.class,0);
		}
		public PushStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pushStatement; }
	}

	public final PushStatementContext pushStatement() throws RecognitionException {
		PushStatementContext _localctx = new PushStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pushStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(K_PUSH);
			setState(79);
			metric_name();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==K_TIME) {
				{
				setState(80);
				match(K_TIME);
				setState(81);
				timestamp();
				}
			}

			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==K_TAGGED) {
				{
				setState(84);
				match(K_TAGGED);
				setState(85);
				tag_list();
				}
			}

			setState(88);
			match(K_SET);
			setState(89);
			field_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateStatementContext extends ParserRuleContext {
		public TerminalNode K_CONFIG() { return getToken(NexusParser.K_CONFIG, 0); }
		public TerminalNode K_METRICS() { return getToken(NexusParser.K_METRICS, 0); }
		public Metric_nameContext metric_name() {
			return getRuleContext(Metric_nameContext.class,0);
		}
		public TerminalNode K_WITH() { return getToken(NexusParser.K_WITH, 0); }
		public Option_listContext option_list() {
			return getRuleContext(Option_listContext.class,0);
		}
		public CreateStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createStatement; }
	}

	public final CreateStatementContext createStatement() throws RecognitionException {
		CreateStatementContext _localctx = new CreateStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(K_CONFIG);
			setState(92);
			match(K_METRICS);
			setState(93);
			metric_name();
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==K_WITH) {
				{
				setState(94);
				match(K_WITH);
				setState(95);
				option_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryStatementContext extends ParserRuleContext {
		public TerminalNode K_QUERY() { return getToken(NexusParser.K_QUERY, 0); }
		public Metric_nameContext metric_name() {
			return getRuleContext(Metric_nameContext.class,0);
		}
		public Time_rangeContext time_range() {
			return getRuleContext(Time_rangeContext.class,0);
		}
		public TerminalNode K_TAGGED() { return getToken(NexusParser.K_TAGGED, 0); }
		public Tag_listContext tag_list() {
			return getRuleContext(Tag_listContext.class,0);
		}
		public Query_clausesContext query_clauses() {
			return getRuleContext(Query_clausesContext.class,0);
		}
		public QueryStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryStatement; }
	}

	public final QueryStatementContext queryStatement() throws RecognitionException {
		QueryStatementContext _localctx = new QueryStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_queryStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(K_QUERY);
			setState(99);
			metric_name();
			setState(100);
			time_range();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==K_TAGGED) {
				{
				setState(101);
				match(K_TAGGED);
				setState(102);
				tag_list();
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35184458072064L) != 0)) {
				{
				setState(105);
				query_clauses();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Time_rangeContext extends ParserRuleContext {
		public TerminalNode K_FROM() { return getToken(NexusParser.K_FROM, 0); }
		public List<TimestampContext> timestamp() {
			return getRuleContexts(TimestampContext.class);
		}
		public TimestampContext timestamp(int i) {
			return getRuleContext(TimestampContext.class,i);
		}
		public TerminalNode K_TO() { return getToken(NexusParser.K_TO, 0); }
		public TerminalNode K_RELATIVE() { return getToken(NexusParser.K_RELATIVE, 0); }
		public TerminalNode DURATION_LITERAL() { return getToken(NexusParser.DURATION_LITERAL, 0); }
		public Time_rangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time_range; }
	}

	public final Time_rangeContext time_range() throws RecognitionException {
		Time_rangeContext _localctx = new Time_rangeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_time_range);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				match(K_FROM);
				setState(109);
				timestamp();
				setState(110);
				match(K_TO);
				setState(111);
				timestamp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				match(K_FROM);
				setState(114);
				match(K_RELATIVE);
				setState(115);
				match(T__1);
				setState(116);
				match(DURATION_LITERAL);
				setState(117);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Query_clausesContext extends ParserRuleContext {
		public TerminalNode K_AGGREGATE() { return getToken(NexusParser.K_AGGREGATE, 0); }
		public Aggregation_spec_listContext aggregation_spec_list() {
			return getRuleContext(Aggregation_spec_listContext.class,0);
		}
		public TerminalNode K_LIMIT() { return getToken(NexusParser.K_LIMIT, 0); }
		public TerminalNode NUMBER() { return getToken(NexusParser.NUMBER, 0); }
		public TerminalNode K_AFTER() { return getToken(NexusParser.K_AFTER, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(NexusParser.STRING_LITERAL, 0); }
		public TerminalNode K_BY() { return getToken(NexusParser.K_BY, 0); }
		public DurationContext duration() {
			return getRuleContext(DurationContext.class,0);
		}
		public TerminalNode K_WITH() { return getToken(NexusParser.K_WITH, 0); }
		public TerminalNode K_EMPTY() { return getToken(NexusParser.K_EMPTY, 0); }
		public TerminalNode K_WINDOWS() { return getToken(NexusParser.K_WINDOWS, 0); }
		public TerminalNode K_ORDER() { return getToken(NexusParser.K_ORDER, 0); }
		public TerminalNode K_ASC() { return getToken(NexusParser.K_ASC, 0); }
		public TerminalNode K_DESC() { return getToken(NexusParser.K_DESC, 0); }
		public Query_clausesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query_clauses; }
	}

	public final Query_clausesContext query_clauses() throws RecognitionException {
		Query_clausesContext _localctx = new Query_clausesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_query_clauses);
		int _la;
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_AGGREGATE:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(120);
				match(K_AGGREGATE);
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_BY) {
					{
					setState(121);
					match(K_BY);
					setState(122);
					duration();
					}
				}

				setState(125);
				match(T__1);
				setState(126);
				aggregation_spec_list();
				setState(127);
				match(T__2);
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_WITH) {
					{
					setState(128);
					match(K_WITH);
					setState(129);
					match(K_EMPTY);
					setState(130);
					match(K_WINDOWS);
					}
				}

				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_LIMIT) {
					{
					setState(133);
					match(K_LIMIT);
					setState(134);
					match(NUMBER);
					}
				}

				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_AFTER) {
					{
					setState(137);
					match(K_AFTER);
					setState(138);
					match(STRING_LITERAL);
					}
				}

				}
				break;
			case K_ORDER:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(141);
				match(K_ORDER);
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_ASC || _la==K_DESC) {
					{
					setState(142);
					_la = _input.LA(1);
					if ( !(_la==K_ASC || _la==K_DESC) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_LIMIT) {
					{
					setState(145);
					match(K_LIMIT);
					setState(146);
					match(NUMBER);
					}
				}

				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_AFTER) {
					{
					setState(149);
					match(K_AFTER);
					setState(150);
					match(STRING_LITERAL);
					}
				}

				}
				break;
			case K_LIMIT:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(153);
				match(K_LIMIT);
				setState(154);
				match(NUMBER);
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_AFTER) {
					{
					setState(156);
					match(K_AFTER);
					setState(157);
					match(STRING_LITERAL);
					}
				}

				}
				break;
			case K_AFTER:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(160);
				match(K_AFTER);
				setState(161);
				match(STRING_LITERAL);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RemoveStatementContext extends ParserRuleContext {
		public TerminalNode K_REMOVE() { return getToken(NexusParser.K_REMOVE, 0); }
		public Series_specifierContext series_specifier() {
			return getRuleContext(Series_specifierContext.class,0);
		}
		public List<TerminalNode> K_FROM() { return getTokens(NexusParser.K_FROM); }
		public TerminalNode K_FROM(int i) {
			return getToken(NexusParser.K_FROM, i);
		}
		public Metric_nameContext metric_name() {
			return getRuleContext(Metric_nameContext.class,0);
		}
		public TerminalNode K_TAGGED() { return getToken(NexusParser.K_TAGGED, 0); }
		public Tag_listContext tag_list() {
			return getRuleContext(Tag_listContext.class,0);
		}
		public TerminalNode K_AT() { return getToken(NexusParser.K_AT, 0); }
		public List<TimestampContext> timestamp() {
			return getRuleContexts(TimestampContext.class);
		}
		public TimestampContext timestamp(int i) {
			return getRuleContext(TimestampContext.class,i);
		}
		public TerminalNode K_TO() { return getToken(NexusParser.K_TO, 0); }
		public RemoveStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_removeStatement; }
	}

	public final RemoveStatementContext removeStatement() throws RecognitionException {
		RemoveStatementContext _localctx = new RemoveStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_removeStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(K_REMOVE);
			setState(179);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_SERIES:
				{
				setState(165);
				series_specifier();
				}
				break;
			case K_FROM:
				{
				setState(166);
				match(K_FROM);
				setState(167);
				metric_name();
				setState(168);
				match(K_TAGGED);
				setState(169);
				tag_list();
				setState(177);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case K_AT:
					{
					setState(170);
					match(K_AT);
					setState(171);
					timestamp();
					}
					break;
				case K_FROM:
					{
					setState(172);
					match(K_FROM);
					setState(173);
					timestamp();
					setState(174);
					match(K_TO);
					setState(175);
					timestamp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShowStatementContext extends ParserRuleContext {
		public TerminalNode K_SHOW() { return getToken(NexusParser.K_SHOW, 0); }
		public TerminalNode K_METRICS() { return getToken(NexusParser.K_METRICS, 0); }
		public TerminalNode K_TAG() { return getToken(NexusParser.K_TAG, 0); }
		public TerminalNode K_KEYS() { return getToken(NexusParser.K_KEYS, 0); }
		public TerminalNode K_FROM() { return getToken(NexusParser.K_FROM, 0); }
		public Metric_nameContext metric_name() {
			return getRuleContext(Metric_nameContext.class,0);
		}
		public TerminalNode K_VALUES() { return getToken(NexusParser.K_VALUES, 0); }
		public TerminalNode K_WITH() { return getToken(NexusParser.K_WITH, 0); }
		public TerminalNode K_KEY() { return getToken(NexusParser.K_KEY, 0); }
		public Tag_valueContext tag_value() {
			return getRuleContext(Tag_valueContext.class,0);
		}
		public ShowStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_showStatement; }
	}
